--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,7 +7,7 @@
 }
 
 html, body {
-    height: 102vh;
+    height: 100vh;
     width: 100vw;
     background-color: black;
 }
@@ -37,7 +37,7 @@ iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
-    width: 269px;
+    width: 267px;
     height: 472px;
 }
 
@@ -49,7 +49,7 @@ section#redes-sociais img {
     width: 50px;
     margin: 10px;
     border-radius: 50%;
-    box-shadow: 2px 2px 5px hsla(0, 0%, 0%, 0.452);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.452);
     box-sizing: border-box;
 }
 
